--- a/.cirrus.yaml
+++ b/.cirrus.yaml
@@ -58,6 +58,7 @@ rspec_task:
       - image: ruby:2.6
       - image: ruby:2.7
       - image: ruby:3.0
+      - image: ruby:3.1
   <<: *bundle_cache
 
   environment:
