--- a/.cirrus.yaml
+++ b/.cirrus.yaml
@@ -23,7 +23,7 @@ remark_task:
 
   lint_script: npm run remark
 
-  only_if: ($CIRRUS_BRANCH == 'master') ||
+  only_if: ($CIRRUS_BRANCH == 'main') ||
     changesInclude(
       '.cirrus.yaml', '.gitignore', 'package.json', '.remarkrc.yaml', '**.md'
     )
@@ -41,7 +41,7 @@ rubocop_task:
       type: text/json
       format: rubocop
 
-  only_if: ($CIRRUS_BRANCH == 'master') ||
+  only_if: ($CIRRUS_BRANCH == 'main') ||
     changesInclude(
       '.cirrus.yaml', '.gitignore', 'Gemfile', '.toys.rb', '.rubocop.yml', '*.gemspec',
       '**.rb', '**.ru'
@@ -71,7 +71,7 @@ rspec_task:
       type: text/json
       format: rspec
 
-  only_if: ($CIRRUS_BRANCH == 'master') ||
+  only_if: ($CIRRUS_BRANCH == 'main') ||
     changesInclude(
       '.cirrus.yaml', '.gitignore', 'Gemfile', '.toys.rb', '.rspec', '*.gemspec', 'lib/**',
       'spec/**'
