--- a/.cirrus.yaml
+++ b/.cirrus.yaml
@@ -60,7 +60,7 @@ rspec_task:
       - image: ruby:3.1
   <<: *bundle_cache
 
-  test_script: bundle exec rspec --format=json --out=rspec.json
+  test_script: bundle exec rspec
 
   codecov_uploader_cache:
     folder: codecov
@@ -72,12 +72,6 @@ rspec_task:
       - chmod +x codecov/uploader
 
   codecov_script: codecov/uploader
-
-  always:
-    rspec_artifacts:
-      path: rspec.json
-      type: text/json
-      format: rspec
 
   only_if: ($CIRRUS_BRANCH == 'main') ||
     changesInclude(
